Default message when there are no local photos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Photo Library</string>
+
+    <string name="cloud_download">Cloud Download</string>
+
+    <string name="local_photos_default_message">No local photos available. Please download a cloud photo first.</string>
+    
 </resources>
