Default text is now clearer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="cloud_download">Cloud Download</string>
 
-    <string name="local_photos_default_message">No local photos available. Please download a cloud photo first.</string>
-    
+    <string name="local_photos_default_message">No local photos available. Please download a photo first.</string>
+
 </resources>
